--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <header class="header">
-        some text
+     <div class="logo-box">
+         <img src="img/logo-white.png" alt="Natours Logo" class = "logo">
+     </div>
+     <div class="text-box">
+        <h1 class="heading-primary">
+            <span class="heading-primary-main">Outdoors</span>
+            <span class="heading-primary-sub">is where life happens</span>
+        </h1>
+        <a href="#" class="btn btn-white btn-animated">Discover Our Tours</a>
+     </div>
+    
     </header>
 </body>
 </html>
