about section starts

--- a/index.html
+++ b/index.html
@@ -21,5 +21,15 @@
      </div>
     
     </header>
+    <section class="grid-test">
+        <div class="row">
+            <div class="col-1-of-2">
+                col 1 of 2
+            </div>
+            <div class="col-1-of-2">
+                col 1 of 2
+            </div>
+        </div>
+    </section>
 </body>
 </html>
