about section finished

--- a/index.html
+++ b/index.html
@@ -21,13 +21,35 @@
      </div>
     
     </header>
-    <section class="grid-test">
+    <section class="about">
+        <div class="u-center-text">
+            <div class="heading-secondary">
+                Exciting tours for adventurous people
+            </div>
+        </div>
+       
         <div class="row">
             <div class="col-1-of-2">
-                col 1 of 2
+              <div class="heading-tertiary">
+                  You're going to fall in love with nature
+              </div>
+              <div class="paragraph">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis quaerat autem voluptatum hic dolores natus, vero quasi eveniet. Quia ducimus placeat voluptatibus facilis quasi! Voluptatem reprehenderit neque vitae quos omnis.
+              </div>
+              <div class="heading-tertiary">
+                Live adventure like you never have before
+            </div>
+            <div class="paragraph">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe consectetur voluptate illo dolores laudantium aperiam enim velit maxime. Ea cupiditate reprehenderit, hic corrupti sit neque ducimus eveniet fuga assumenda sint!
+            </div>
+            <a href="#" class="btn-text"> Learn More &rarr;</a>
             </div>
             <div class="col-1-of-2">
-                col 1 of 2
+                <div class="composition">
+                    <img src="img/nat-1-large.jpg" alt="photo1" class="composition__photo composition_photo--p1">
+                    <img src="img/nat-2-large.jpg" alt="photo2" class="composition__photo composition_photo--p2">
+                    <img src="img/nat-3-large.jpg" alt="photo3" class="composition__photo composition_photo--p3">
+                </div>
             </div>
         </div>
     </section>
