--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>Natours | Eciting tours for adventurer</title>
 </head>
@@ -49,6 +50,44 @@
                     <img src="img/nat-1-large.jpg" alt="photo1" class="composition__photo composition_photo--p1">
                     <img src="img/nat-2-large.jpg" alt="photo2" class="composition__photo composition_photo--p2">
                     <img src="img/nat-3-large.jpg" alt="photo3" class="composition__photo composition_photo--p3">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-features">
+        <!-- <i class="icon-basic-world"></i> -->
+        <div class="row">
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-world"></i>
+                    <h3 class="heading-tertiary">Explore the world</h3>
+                    <p class="feature-box__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-compass"></i>
+                    <h3 class="heading-tertiary">Find your way</h3>
+                    <p class="feature-box__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-map"></i>
+                    <h3 class="heading-tertiary">Meet nature</h3>
+                    <p class="feature-box__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
+                </div>
+            </div>
+            <div class="col-1-of-4">
+                <div class="feature-box">
+                    <i class="feature-box__icon icon-basic-heart"></i>
+                    <h3 class="heading-tertiary">Live a healthier life</h3>
+                    <p class="feature-box__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    </p>
                 </div>
             </div>
         </div>
