--- a/index.html
+++ b/index.html
@@ -224,8 +224,70 @@
     </section>
     <section class="section-book">
         <div class="row">
-            <div class="book"></div>
+            <div class="book">
+                <div class="book__form">
+                    <form action="#" class="form">
+                        <div  >
+                            <div class="heading-secondary u-margin-bottom-medium">
+                              Start booking now
+                            </div>
+                        </div>
+                        <div class="form__group">
+                            <input type="text" class="form__input" placeholder="Full Name" id = "name" required>
+                            <label for="name" class="form__label">Full Name</label>
+                        </div>
+                        <div class="form__group">
+                            <input type="email" class="form__input" placeholder="Email address" id = "email" required>
+                            <label for="email" class="form__label">Email address</label>
+                        </div>
+                        <div class="form__group">
+                            <div class="form__radio-group">
+                                <input type="radio" class="form__radio-input" id = "small" name = "size">
+                                <label for="small" class="form__radio-label">
+                                    <span class="form__radio-button"></span>    
+                                    small tour group
+                                </label>
+                            </div>   
+                            <div class="form__group">
+                                <div class="form__radio-group">
+                                    <input type="radio" class="form__radio-input" id = "large" name = "size">
+                                    <label for="large" class="form__radio-label">
+                                        <span class="form__radio-button"></span> 
+                                        Large tour group
+                                    </label>
+                                </div>                      
+                            </div>
+                            <div class="form__group">
+                                <button class="btn btn-text u-margin-top-small">Next Step &rarr;</button>
+                            </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="img/logo-green-2x.png" alt="full logo" class= "footer__logo">
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="" class="footer__link">company</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">Contact us</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">Careers</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">Policy</a></li>
+                        <li class="footer__item"><a href="" class="footer__link">Terms</a></li>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Built by <a href="" class="footer__link">Ashish Bajracharya</a>
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
