--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <title>Natours | Eciting tours for adventurer</title>
 </head>
 <body>
+    <div class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+        <label for="navi-toggle" class="navigation__button">Menu</label>
+        <div class="navigation__background">&nbsp;</div>
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">About</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">Popular tours</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">stories</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">book Now</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <header class="header">
      <div class="header__logo-box">
          <img src="img/logo-white.png" alt="Natours Logo" class = "header__logo">
