pure css popup completed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="navigation">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
-        <label for="navi-toggle" class="navigation__button">Menu</label>
+        <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+        </label>
         <div class="navigation__background">&nbsp;</div>
         <nav class="navigation__nav">
             <ul class="navigation__list">
@@ -39,7 +41,7 @@
             <span class="heading-primary--main">Outdoors</span>
             <span class="heading-primary--sub">is where life happens</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Discover Our Tours</a>
+        <a href="section-tours" class="btn btn--white btn--animated">Discover Our Tours</a>
      </div>
     
     </header>
@@ -113,7 +115,7 @@
             </div>
         </div>
     </section>
-    <section class="section-tours">
+    <section class="section-tours" id= "section-tours">
         <div class="u-center-text">
             <div class="heading-secondary">
                Most popular tours
@@ -187,7 +189,7 @@
             
         </div>
         <div class="u-center-text">
-            <a href="#" class="btn-text u-center-text">Discover all tours &rarr;</a>
+            <a href="#popup" class="btn-text u-center-text">Discover all tours &rarr;</a>
         </div>
     </section>
     <section class="section-stories">
@@ -310,5 +312,20 @@
             </div>
         </div>
     </footer>
+    <div class="popup" id="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="" class="popup__img">
+                <img src="img/nat-9.jpg" alt="" class="popup__img">  
+            </div>
+            <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
+                <h2 class="heading-secondary">Start booking now</h2>
+                <h3 class="heading-tertiary"> Important &ndash; Please read these terms before booking</h3>
+                <p class="popup__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nulla eaque nostrum soluta vel. Commodi rerum numquam nesciunt quae, dicta tempore beatae? Consectetur excepturi deserunt cum deleniti, vel sit necessitatibus?</p>
+                <a href="#popup" class="btn btn--green">book now</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
